--- a/.github/workflows/main_testappmsdevops.yml
+++ b/.github/workflows/main_testappmsdevops.yml
@@ -24,9 +24,11 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        working-directory: "./myapp"
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        working-directory: "./myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
